# ProjectFlow

./: Acknowledgements.md  docker-compose.yml
django/: pyproject.toml
django/backend/: requirements.txt
django/backend/backend/: settings.py
svelte/frontend/src/routes/analytics/: +page.server.ts  +page.svelte
svelte/frontend/src/routes/register/: +page.svelte
