[project]
name = "django-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "environ>=1.0",
    "gunicorn>=25.1.0",
    "psycopg2-binary>=2.9.11",
]
